# pie

./: .clang-format  .gitignore  .gitmodules  PythonReceiveData.py  README.md  calibration.txt
.github/workflows/: build.yaml
arduino/src/: etchasketch.cpp  main.cpp  mux.cpp
docs/: Oscilloscope Music 7a3aaad3ab964c1fb35f99a9dc6e4d58.html  _config.yml
docs/_posts/: 2023-11-27-welcome-to-jekyll.markdown
miniproject2/scans/: ring-test.txt  scan-2023-09-15-22-34-32.txt  scan-2023-09-18-17-22-52.txt
miniproject3/src/: main.cpp  main.py  plot.py
miniproject3/src/data/: plot1.data
miniprojects/miniproject2/: calibration.txt
miniprojects/miniproject2/scans/: scan-2023-09-17-22-36-27.txt  scan-2023-09-18-17-36-43.txt
miniprojects/miniproject3/: platformio.ini
miniprojects/miniproject3/src/: main.cpp  main.py  plot.py
project2/: project2.ino
scans/: scan-2023-09-14-18-28-37.txt  scan-2023-09-15-20-25-38.txt  scan-2023-09-17-21-52-54.txt  scan-2023-09-17-22-05-41.txt  scan-2023-09-18-16-42-07.txt  scan-2023-09-21-15-59-16.txt
src/: main.cpp  server.py
visualizer/: CMakeLists.txt  build  etch-sketch-loop
visualizer/src/: CMakeLists.txt  hello_world.cpp  raw_audio_player.hpp
visualizer/src/audio/: callback.hpp  defaults.hpp  helpers.hpp  open_stream.hpp  player.hpp  util.hpp
visualizer/src/serial/: hello_world.cpp  serial_reciever.hpp  util.hpp
